# react-native-leveldb

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-leveldb.podspec  tsconfig.json
android/: .project  CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativeleveldb/: LeveldbJsiPackage.java  LeveldbModule.java  LeveldbModule.kt  LeveldbPackage.java  LeveldbPackage.kt
cpp/: react-native-leveldb.cpp  react-native-leveldb.h
example/: .gitignore  app.json  metro.config.js  package.json  react-native.config.js
example/android/: .project  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativeleveldb/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativeleveldb/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt  ReactNativeFlipper.java
example/android/app/src/main/java/com/example/reactnativeleveldb/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/example/reactnativeleveldb/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/example/reactnativeleveldb/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/drawable/: rn_edit_text_material.xml
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/reactnativeleveldb/: ReactNativeFlipper.java
example/ios/: AppDelegate.swift  File.swift  Podfile
example/ios/LeveldbExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/LeveldbExample.xcodeproj/: project.pbxproj
example/ios/LeveldbExample.xcodeproj/xcshareddata/xcschemes/: LeveldbExample.xcscheme
example/ios/LeveldbExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  benchmark.tsx  example.ts  test-util.tsx
ios/: Leveldb.h  Leveldb.mm
ios/Leveldb.xcodeproj/: project.pbxproj
src/: fake.test.ts  fake.ts  index.ts  index.tsx
